[gd_scene load_steps=9 format=3 uid="uid://5kdkgg1387nh"]

[ext_resource type="Script" uid="uid://caxpcqgyq1x5" path="res://controller.gd" id="1_h2yge"]
[ext_resource type="Shader" uid="uid://cgck6x1blha3h" path="res://gradient.gdshader" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cwrh2j1yr1mhs" path="res://triangle.png" id="2_0xm2m"]

[sub_resource type="Gradient" id="Gradient_0xm2m"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h2yge"]
gradient = SubResource("Gradient_0xm2m")

[sub_resource type="Gradient" id="Gradient_ig7tw"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0.0245902, 0.204918, 0.491803, 1)
colors = PackedColorArray(0, 1, 0.933333, 1, 1, 0, 0, 1, 0.843137, 1, 0.552941, 1, 0, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0xm2m"]
gradient = SubResource("Gradient_ig7tw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bvp3"]
shader = ExtResource("1_ig7tw")
shader_parameter/gradient2 = SubResource("GradientTexture2D_h2yge")
shader_parameter/gradient3 = SubResource("GradientTexture2D_0xm2m")
shader_parameter/colors = 1
shader_parameter/amount = 0.0
shader_parameter/rotation = 37.321

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="ColorRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_1bvp3")
offset_left = 100.0
offset_top = 87.0
offset_right = 294.0
offset_bottom = 281.0
texture = ExtResource("2_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 349.0
offset_top = 95.0
offset_right = 748.0
offset_bottom = 269.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mode"

[node name="Mode" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "One"
popup/item_0/id = 0
popup/item_1/text = "Two"
popup/item_1/id = 1
popup/item_2/text = "Three"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Amount"

[node name="Amount" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rotation"

[node name="Rotation" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 360.0
step = 0.1

[connection signal="item_selected" from="VBoxContainer/Mode" to="." method="_on_mode_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Amount" to="." method="_on_amount_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Rotation" to="." method="_on_rotation_value_changed"]
